<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Amsco</class>
 <widget class="QWidget" name="Amsco">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>492</width>
    <height>100</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>492</width>
    <height>100</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>492</width>
    <height>100</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QCheckBox" name="use_key">
   <property name="geometry">
    <rect>
     <x>280</x>
     <y>10</y>
     <width>201</width>
     <height>21</height>
    </rect>
   </property>
   <property name="text">
    <string>Use Key</string>
   </property>
  </widget>
  <widget class="QCheckBox" name="vertical_swap">
   <property name="geometry">
    <rect>
     <x>280</x>
     <y>40</y>
     <width>201</width>
     <height>21</height>
    </rect>
   </property>
   <property name="text">
    <string>Force Vertical Swap</string>
   </property>
  </widget>
  <widget class="QPushButton" name="edit_key">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>40</y>
     <width>121</width>
     <height>31</height>
    </rect>
   </property>
   <property name="text">
    <string>Edit Key</string>
   </property>
  </widget>
  <widget class="QSpinBox" name="column_count">
   <property name="geometry">
    <rect>
     <x>90</x>
     <y>10</y>
     <width>42</width>
     <height>22</height>
    </rect>
   </property>
   <property name="minimum">
    <number>1</number>
   </property>
  </widget>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>71</width>
     <height>21</height>
    </rect>
   </property>
   <property name="text">
    <string>Column Count:</string>
   </property>
  </widget>
  <widget class="QCheckBox" name="begin_pair">
   <property name="geometry">
    <rect>
     <x>280</x>
     <y>70</y>
     <width>201</width>
     <height>21</height>
    </rect>
   </property>
   <property name="text">
    <string>Begin Pair</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
